fix: banner text content alignment

--- a/wp-content/themes/congresso-custom/style.css
+++ b/wp-content/themes/congresso-custom/style.css
@@ -1,12 +1,14 @@
 /* Banner Overlay Columns */
-.banner-overlay {
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	height: 100%;
+
+.banner__container {
 	position: absolute;
 	top: 0;
 	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+}
 .banner__col {
 	flex-basis: 50%;
 	max-width: 50%;
